[package]
name = "is-debugger-present"
version = "0.1.0"
edition = "2021"

[dependencies]


[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
]

[target.'cfg(not(target_os = "windows"))'.dependencies.libc]
version = "0.2"
default-features = false
